--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -87,10 +87,10 @@
                         <a class="nav-link" href="#" id="notificationsDropdown" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             <i class="fas fa-bell"></i>
-                            {% if user.notifications.filter.count > 0 %}
+                            {% if user.notifications.all.count > 0 %}
                             <span
                                 class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                                {{ user.notifications.filter.count }}
+                                {{ user.notifications.all.count }}
                             </span>
                             {% endif %}
                         </a>
